--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
 
     <title>CodeHacker - Heaven for programmers</title>
 </head>
-
+<!-- body -->
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand" href="/CodeHackerBootstrap/">CodeHacker</a>
