--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <a class="nav-link" href="/CodeHackerBootstrap/">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/CodeHackerBootstrap/about.html/">About</a>
+                    <a class="nav-link" href="/CodeHackerBootstrap/about.html">About</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
@@ -43,7 +43,7 @@
                     </div>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/CodeHackerBootstrap/contact.html/">Contact us</a>
+                    <a class="nav-link" href="/CodeHackerBootstrap/contact.html">Contact us</a>
                 </li>
             </ul>
             <form class="form-inline my-2 my-lg-0">
